--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -28,6 +28,13 @@
   color: #61dafb;
 }
 
+.App-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
