--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -54,7 +54,18 @@
   font-family: "Kode Mono", monospace;
   font-optical-sizing: auto;
   font-weight: 400;
-  font-style: normal;
+}
+
+.kode-mono-medium {
+  font-family: "Kode Mono", monospace;
+  font-optical-sizing: auto;
+  font-weight: 500;
+}
+
+.kode-mono-semibold {
+  font-family: "Kode Mono", monospace;
+  font-optical-sizing: auto;
+  font-weight: 600;
 }
 
 .forest-background {
