--- a/portfolio/src/styles/App.css
+++ b/portfolio/src/styles/App.css
@@ -76,7 +76,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 1)), url(../public/background.png);
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 1)), url(../../public/background.png);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
